Add Gnu Opt to handler version, help, own properties

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,23 @@
+# ---------------------------------------------------------------- #
+#                                                                  # 
+#                       JASON Configuration                        #
+#                                                                  #
+# ---------------------------------------------------------------- #
+
+## ---- Application Name ----
+## The application's name is automatically updated by maven
+Starter.APP_NAME=${project.artifactId}
+
+## ---- Building date ----
+## The building date is automatically updated by maven
+Starter.BUILD_DATE=${timestamp}
+
+## ---- Application version ----
+## The application's version is automatically updated by maven
+Starter.VERSION=${project.version}
+
+## ---- Application copyright ----
+Starter.COPYRIGHT=Copyright 2017 CNES
+
+## The directory where the GeoJSON are written
 Starter.output=/home/malapert/tmp/
