--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,24 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.cnes</groupId>
     <artifactId>JasonExtraction</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <description>Extract variables from NetCDF files, available on the AVISO FTP and converts
+        them to GeoJson.</description>
+    <url>https://github.com/RegardsOss/JasonExtraction</url>
+    <inceptionYear>2017</inceptionYear>
+    <organization>
+        <name>Centre National d'Etudes Spatiales (CNES)</name>
+        <url>https://cnes.fr</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>jcm</id>
+            <name>Malapert, Jean-Christophe</name>
+            <email>jean-christophe.malapert@cnes.fr</email>
+            <organization>Centre National d'Etudes Spatiales (CNES)</organization>
+            <organizationUrl>https://cnes.fr</organizationUrl>
+        </developer>
+    </developers>    
     <repositories>
         <repository>
             <id>maven-boundlessgeo</id>
