Fix Logger problem

--- a/src/main/resources/log4.properties
+++ b/src/main/resources/log4.properties
@@ -10,7 +10,7 @@ log4j.appender.FILE.File=logs/jason-log.txt
 log4j.appender.FILE.ImmediateFlush=true
 
 # Set the threshold to debug mode
-log4j.appender.FILE.Threshold=info
+log4j.appender.FILE.Threshold=INFO
 
 # Set the append to false, should not overwrite
 log4j.appender.FILE.Append=true
