--- a/src/main/resources/log4.properties
+++ b/src/main/resources/log4.properties
@@ -3,6 +3,8 @@ log4j.rootLogger = INFO, FILE
 
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+
 # Set the name of the file
 log4j.appender.FILE.File=logs/jason-log.txt
 
@@ -16,7 +18,7 @@ log4j.appender.FILE.Threshold=INFO
 log4j.appender.FILE.Append=true
 
 # Set the maximum file size before rollover
-log4j.appender.FILE.MaxFileSize=10MB
+log4j.appender.FILE.MaxFileSize=100MB
 
 # Set the the backup index
 log4j.appender.FILE.MaxBackupIndex=10
@@ -24,3 +26,5 @@ log4j.appender.FILE.MaxBackupIndex=10
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern=[%-5p - %t] %d %c - %m%n
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.conversionPattern=[%-5p - %t] %d %c - %m%n
