personnalisation du FTP_DIRECTORY

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,4 +20,6 @@ Starter.VERSION=${project.version}
 Starter.COPYRIGHT=Copyright 2017 CNES
 
 ## The directory where the GeoJSON are written
-Starter.output=/home/malapert/tmp/
+Starter.output=/home/chmanu/JasonExtraction/tmp/
+
+Starter.ftp_directory=ftp://avisoftp.cnes.fr/AVISO/pub/jason-1/gdr_e/cycle_102/
